--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* ===== ESTILO GERAL ===== */
 body {
     font-family: Arial, sans-serif;
-    background-color: #000000;
+    background-color: #1e2138;
     color: #f1f5f9;
     margin: 0;
     padding: 0;
@@ -24,7 +24,7 @@ p {
 
 hr {
     margin: 25px 0;
-    border: 0.5px solid #334155;
+    border: 0.5px solid #ffffff;
 }
 
 /* ===== ÁREA DE BUSCA ===== */
